section portafolio completa

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <a href="#about" class="under-line-nav">Acerca de</a>
           </li>
           <li><a href="#portfolio" class="under-line-nav">Portafolio</a></li>
-          <li><a href="#" class="under-line-nav">Contacto</a></li>
+          <li><a href="#contact" class="under-line-nav">Contacto</a></li>
         </ul>
       </nav>
     </header>
@@ -148,14 +148,102 @@
       </section>
       <section id="portfolio" class="pt-20">
         <div class="h-screen max-w-[75vw] mx-auto">
-          <h2 class="titule-secundary text-2xl">portafolio</h2>
-          <div class="grid grid-cols-4 gap-5 w-full h-full">
-            <div class="bg-white"></div>
-            <div class="bg-red-700"></div>
-            <div class="bg-blue-950"></div>
-            <div class="bg-green-600"></div>
+          <h2 class="titule-secondary text-2xl mb-10">portafolio</h2>
+          <div class="grid grid-cols-3 grid-rows-2 justify-between gap-y-14 w-full h-11/12">
+            <article>
+              <div class="card group">
+                <div class="content group-hover:rotate-card">
+                  <div class="back">
+                    <div class="back-content bg-[url('/src/imgs/encriptador.webp')] bg-cover "> 
+                      <div class="title-card">
+                        <p class="titule-secondary">Encriptador</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="front bg-[url('/src/imgs/encriptador.webp')] bg-cover">
+                    <div class="front-content">
+                      <div class="description flex flex-col justify-around group">
+                          <div class="flex justify-around items-center flex-wrap gap-5 transition-all group-hover:animate-card" >
+                            <i class="fa-brands fa-square-js text-5xl text-[#ffdf00]"></i>
+                            <span class=""><img src="./src/imgs/tailwind.svg" class="w-20 h-20" alt="" ></span>
+                            <i class="fa-brands fa-html5 text-5xl text-[#ff5722]"></i>
+                            <i class="fa-brands fa-css3 text-5xl text-[#264de4]"></i>
+                          </div>
+                          <div class="flex  gap-5 h-12 group-hover:animate-reverse">
+                            <a href="https://www.google.com.co/" target="_blank" class="btn-card">Pagina web <i class="fa fa-external-link-alt"></i></a>
+                            <a href="https://www.google.com.co/" target="_blank" class="btn-card">Github <i class="fa fa-external-link-alt"></i></a>
+                          </div> 
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </article>
+            <article>
+              <div class="card group">
+                <div class="content group-hover:rotate-card">
+                  <div class="back">
+                    <div class="back-content bg-[url('/src/imgs/portafolio.webp')] bg-cover "> 
+                      <div class="title-card">
+                        <p class="titule-secondary">Portafolio</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="front bg-[url('/src/imgs/portafolio_2.webp')] bg-cover">
+                    <div class="front-content">
+                      <div class="description flex flex-col justify-around group">
+                          <div class="flex justify-around items-center flex-wrap gap-5 transition-all group-hover:animate-card" >
+                            <i class="fa-brands fa-square-js text-5xl text-[#ffdf00]"></i>
+                            <span class=""><img src="./src/imgs/tailwind.svg" class="w-20 h-20" alt="" ></span>
+                            <i class="fa-brands fa-html5 text-5xl text-[#ff5722]"></i>
+                            <i class="fa-brands fa-css3 text-5xl text-[#264de4]"></i>
+                          </div>
+                          <div class="flex  gap-5 h-12 group-hover:animate-reverse">
+                            <a href="https://www.google.com.co/" target="_blank" class="btn-card bg-[#A5C5E9] ">Pagina web <i class="fa fa-external-link-alt"></i></a>
+                            <a href="https://www.google.com.co/" target="_blank" class="btn-card">Github <i class="fa fa-external-link-alt"></i></a>
+                          </div> 
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </article>
+            <article>
+              <div class="card group">
+                <div class="content group-hover:rotate-card">
+                  <div class="back">
+                    <div class="back-content bg-cover "> 
+                      <div class="title-card">
+                        <p class="titule-secondary">pqrs</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="front ">
+                    <div class="front-content">
+                      <div class="description flex flex-col justify-around group">
+                          <div class="flex justify-around items-center flex-wrap gap-5 transition-all group-hover:animate-card" >
+                            <i class="fa-brands fa-square-js text-5xl text-[#ffdf00]"></i>
+                            <span class=""><img src="./src/imgs/tailwind.svg" class="w-20 h-20" alt="" ></span>
+                            <i class="fa-brands fa-html5 text-5xl text-[#ff5722]"></i>
+                            <i class="fa-brands fa-css3 text-5xl text-[#264de4]"></i>
+                            <i class="fa-brands fa-java text-5xl text-[#ba0c0d]"></i>
+                            <i class="fa-brands fa-vuejs text-5xl text-[#3fb984]"></i>
+                          </div>
+                          <div class="flex  gap-5 h-12 group-hover:animate-reverse">
+                            <a href="https://www.google.com.co/" target="_blank" class="btn-card">Pagina web <i class="fa fa-external-link-alt"></i></a>
+                            <a href="https://www.google.com.co/" target="_blank" class="btn-card">Github <i class="fa fa-external-link-alt"></i></a>
+                          </div> 
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </article>
           </div>
         </div>
+      </section>
+      <section id="contact">
+        <div class="h-screen pt-20 bg-[#A5C5E9]"></div>
       </section>
     </main>
     <script
