--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./dist/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
+    <link rel="icon" type="image/jpg" href="./src/imgs/favicon.webp" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&display=swap"
       rel="stylesheet"
@@ -268,13 +268,13 @@
                           class="flex gap-5 h-12 group-hover:animate-reverse"
                         >
                           <a
-                            href="https://www.google.com.co/"
+                            href="https://wikillix.github.io/Encriptador-alura/"
                             target="_blank"
                             class="btn-card"
                             >Pagina web <i class="fa fa-external-link-alt"></i
                           ></a>
                           <a
-                            href="https://www.google.com.co/"
+                            href="https://github.com/WIKILLIX/Encriptador-alura"
                             target="_blank"
                             class="btn-card"
                             >Github <i class="fa fa-external-link-alt"></i
