listo para desplegar

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="./dist/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="icon" type="image/jpg" href="./src/imgs/favicon.webp" />
+    <link rel="icon" type="image/jpg" href="./favicon.webp" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter&family=Roboto&display=swap"
       rel="stylesheet"
@@ -364,7 +364,8 @@
                         <div
                           class="flex justify-around items-center flex-wrap gap-5 transition-all group-hover:animate-card"
                         >
-                          <i
+                          <h2 class="titule-secondary">EN DESARROLLO</h2>
+                          <!-- <i
                             class="fa-brands fa-square-js text-5xl text-[#ffdf00]"
                           ></i>
                           <span class=""
@@ -384,12 +385,12 @@
                           ></i>
                           <i
                             class="fa-brands fa-vuejs text-5xl text-[#3fb984]"
-                          ></i>
+                          ></i> -->
                         </div>
                         <div
                           class="flex gap-5 h-12 group-hover:animate-reverse"
                         >
-                          <a
+                          <!-- <a
                             href="https://www.google.com.co/"
                             target="_blank"
                             class="btn-card"
@@ -400,7 +401,7 @@
                             target="_blank"
                             class="btn-card"
                             >Github <i class="fa fa-external-link-alt"></i
-                          ></a>
+                          ></a> -->
                         </div>
                       </div>
                     </div>
@@ -426,7 +427,8 @@
                         <div
                           class="flex justify-around items-center flex-wrap gap-5 transition-all group-hover:animate-card"
                         >
-                          <i
+                          <h2 class="titule-secondary">EN DESARROLLO</h2>
+                          <!-- <i
                             class="fa-brands fa-square-js text-5xl text-[#ffdf00]"
                           ></i>
                           <span class=""
@@ -446,12 +448,12 @@
                           ></i>
                           <i
                             class="fa-brands fa-vuejs text-5xl text-[#3fb984]"
-                          ></i>
+                          ></i> -->
                         </div>
                         <div
                           class="flex gap-5 h-12 group-hover:animate-reverse"
                         >
-                          <a
+                          <!-- <a
                             href="https://www.google.com.co/"
                             target="_blank"
                             class="btn-card"
@@ -462,7 +464,7 @@
                             target="_blank"
                             class="btn-card"
                             >Github <i class="fa fa-external-link-alt"></i
-                          ></a>
+                          ></a> -->
                         </div>
                       </div>
                     </div>
@@ -475,7 +477,7 @@
       </section>
       <section id="contact" class="bg-[#A5C5E9]">
         <div
-          class="h-80 max-w-[75vw] mx-auto pb-10 flex justify-between items-center max-md:flex-col max-md:justify-around"
+          class="h-96 max-w-[75vw] mx-auto pb-10 flex justify-between items-center max-md:flex-col max-md:justify-around"
         >
           <h2 class="titule-secondary text-[#070228]" id="title-contact">
             contactame
