[fixed](responsive 650px en header y about-section)

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       >
         <div class="section-about">
           <div
-            class="overflow-hidden border-4 border-white max-h-[470px] mb-10 max-[1116px]:mb-0 max-[590px]:h-80"
+            class="overflow-hidden border-4 border-white max-h-[470px] mb-10 max-[1116px]:mb-0 max-[590px]:h-80 max-[403px]:h-64"
           >
             <img
               src="./src/imgs/perfil dibujo.webp"
@@ -103,13 +103,13 @@
             >
               Acerca de mi
             </h2>
-            <p class="max-[654px]:text-base">
+            <p class="max-[650px]:text-base">
               Como apasionado y experimentado desarrollador fullstack con una
               gran dedicación en la creación de aplicaciones web complejas y
               responsivas, siempre he sentido un gran interés por los números,
               la lógica y la lectura.
             </p>
-            <p class="max-[654px]:text-base">
+            <p class="max-[650px]:text-base">
               Desde que comencé a trabajar en este campo, me he dado cuenta de
               que puedo llevar mis habilidades de análisis a un nivel superior,
               al resolver problemas y desafíos tanto para empresas como para
@@ -132,7 +132,9 @@
               </li>
             </ul>
           </div>
-          <div class="col-span-full flex items-center relative">
+          <div
+            class="col-span-full flex items-center relative max-[650px]:mt-10"
+          >
             <h2
               class="absolute -top-7 left-0 titule-secondary"
               id="forObserver"
