[index]:(update):se actualizo los enlaces de github de pqrsfrontend, se cambiaron dos skills y se ingreso link a cv

--- a/index.html
+++ b/index.html
@@ -128,7 +128,11 @@
               </li>
               <li>
                 <i class="fa-sharp fa-regular fa-greater-than fa-beat"></i
-                ><a href="#"> CV</a>
+                ><a
+                  href="https://drive.google.com/file/d/1zp1W-SPe5deeCCJDvauQvrLy-j_07vwZ/view?usp=share_link"
+                >
+                  CV</a
+                >
               </li>
             </ul>
           </div>
@@ -164,7 +168,10 @@
                 <span class="base"> </span>
                 <span class="title">Tailwind</span>
                 <span class="icon"
-                  ><img src="./src/imgs/tailwind.svg" class="w-20" alt=""
+                  ><img
+                    src="./src/imgs/tailwind.svg"
+                    class="w-20"
+                    alt="logo de tailwind"
                 /></span>
                 <span class="level drop-shadow-[0_0_2px_#44a8b3]"
                   >intermedio</span
@@ -193,24 +200,24 @@
                 >
               </li>
               <li
-                style="--color: #ff5722"
+                style="--color: #b6dcb9"
                 class="skills max-[1140px]:justify-self-center"
               >
                 <span class="base"> </span>
-                <span class="title">html 5</span>
-                <span class="icon"><i class="fa-brands fa-html5"></i></span>
-                <span class="level drop-shadow-[0_0_2px_#ff5722]"
-                  >avanzado</span
-                >
+                <span class="title w-44">Spring boot 3</span>
+                <span class="icon"
+                  ><img src="./src/imgs/spring_boot.svg" class="w-14" alt=""
+                /></span>
+                <span class="level drop-shadow-[0_0_2px_#b6dcb9]">basico</span>
               </li>
               <li
-                style="--color: #264de4"
+                style="--color: #fe372a"
                 class="skills max-[1140px]:justify-self-center"
               >
                 <span class="base"> </span>
-                <span class="title">css 3</span>
-                <span class="icon"><i class="fa-brands fa-css3"></i></span>
-                <span class="level drop-shadow-[0_0_2px_#264de4]"
+                <span class="title">Laravel 9</span>
+                <span class="icon"><i class="fa-brands fa-laravel"></i></span>
+                <span class="level drop-shadow-[0_0_2px_#fe372a]"
                   >intermedio</span
                 >
               </li>
@@ -354,7 +361,7 @@
                   <div class="back">
                     <div class="back-content bg-cover">
                       <div class="title-card">
-                        <p class="titule-secondary">pqrs</p>
+                        <p class="titule-secondary">pqrs frontend</p>
                       </div>
                     </div>
                   </div>
@@ -397,13 +404,13 @@
                             target="_blank"
                             class="btn-card"
                             >Pagina web <i class="fa fa-external-link-alt"></i
-                          ></a>
+                          ></a> -->
                           <a
-                            href="https://www.google.com.co/"
+                            href="https://github.com/WIKILLIX/pqrs-frontend"
                             target="_blank"
                             class="btn-card"
                             >Github <i class="fa fa-external-link-alt"></i
-                          ></a> -->
+                          ></a>
                         </div>
                       </div>
                     </div>
@@ -417,7 +424,7 @@
                   <div class="back">
                     <div class="back-content bg-cover">
                       <div class="title-card">
-                        <p class="titule-secondary">Admin panel</p>
+                        <p class="titule-secondary">pqrs backend</p>
                       </div>
                     </div>
                   </div>
