--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       >
         <ul class="flex gap-5 max-md:flex-col max-md:gap-20 max-md:text-center">
           <li>
-            <a href="#hero-section" id="hero" class="under-line-nav">Casa</a>
+            <a href="#hero-section" id="hero" class="under-line-nav">Inicio</a>
           </li>
           <li>
             <a href="#about" id="about-me" class="under-line-nav">Acerca de</a>
@@ -40,11 +40,6 @@
           <li>
             <a href="#portfolio" id="me-portfolio" class="under-line-nav"
               >Portafolio</a
-            >
-          </li>
-          <li>
-            <a href="#contact" id="contact-me" class="under-line-nav"
-              >Contacto</a
             >
           </li>
         </ul>
@@ -65,9 +60,9 @@
     <main id="main" class="bg-section-hero overflow-hidden">
       <section id="hero-section">
         <div
-          class="max-w-7xl h-[93vh] mx-auto flex justify-center items-center max-[750px]:p-x-5"
+          class="max-w-7xl h-[93vh] mx-auto flex justify-center items-center max-[750px]:p-x-5 relative"
         >
-          <div class="z-50 max-[750px]:text-center">
+          <div class="z-50 max-[750px]:text-center -translate-y-20">
             <h2 class="text-5xl mb-10 font-semibold max-[750px]:text-3xl">
               HOLA, <br class="" />
               MI NOMBRE ES BRAYAN
@@ -75,9 +70,15 @@
 
             <div class="w-[30rem] h-[5rem] overflow-auto">
               <h1 class="text-3xl max-[750px]:text-xl">
-                y soy <span class="text-presentation font-bold"></span>
+                y soy
+                <span class="text-presentation font-bold uppercase"></span>
               </h1>
             </div>
+          </div>
+          <div class="absolute bottom-60 z-50">
+            <a href="#contact" type="button" class="contact-me pt-[6px]"
+              >Contactame</a
+            >
           </div>
         </div>
       </section>
@@ -96,7 +97,7 @@
             />
           </div>
           <div
-            class="pl-10 max-[1116px]:pl-0 flex flex-col gap-5 max-[1016px]:gap-2 max-[460px]:gap-1"
+            class="pl-10 max-[1116px]:pl-0 max-2xl:pl-2 flex flex-col gap-5 max-[1016px]:gap-2 max-[460px]:gap-1"
           >
             <h2
               class="titule-secondary mb-2 max-[654px]:mb-1 max-[654px]:text-base"
@@ -104,25 +105,24 @@
               Acerca de mi
             </h2>
             <p class="max-[650px]:text-base">
-              Como apasionado y experimentado desarrollador fullstack con una
-              gran dedicación en la creación de aplicaciones web complejas y
-              responsivas, siempre he sentido un gran interés por los números,
-              la lógica y la lectura.
+              Como tecnólogo en análisis y desarrollo de sistemas de
+              información, tengo una pasión innata por la tecnología y la
+              programación. Me encanta sumergirme en la lectura y disfruto de
+              los desafíos que presenta encontrar soluciones a problemas reales
+              en tan solo unas líneas de código.
             </p>
             <p class="max-[650px]:text-base">
-              Desde que comencé a trabajar en este campo, me he dado cuenta de
-              que puedo llevar mis habilidades de análisis a un nivel superior,
-              al resolver problemas y desafíos tanto para empresas como para
-              particulares a través del desarrollo de software.
+              Los números y la lógica son mis aliados en este camino,
+              permitiéndome abordar los retos con precisión y eficiencia. Mi
+              objetivo es crear soluciones eficaces y funcionales que resuelvan
+              problemas de manera elegante y efectiva.
             </p>
-            <ul
-              class="mt-14 max-[1514px]:mt-5 max-[1154px]:mt-1 max-[654px]:text-base"
-            >
-              <li class="mb-4 max-[1154px]:mb-1">
+            <ul class="mt-3 max-2xl:mt-0 max-[654px]:text-base">
+              <li class="max-2xl:mb-1">
                 <i class="fa-sharp fa-regular fa-greater-than fa-beat"></i>
                 Ciudad: Bogota, Colombia
               </li>
-              <li class="mb-4 max-[1154px]:mb-1">
+              <li class="max-2xl:mb-1">
                 <i class="fa-sharp fa-regular fa-greater-than fa-beat"></i>
                 Frelance: Disponible
               </li>
@@ -484,9 +484,10 @@
           </div>
         </div>
       </section>
-      <section id="contact" class="bg-[#A5C5E9]">
+
+      <footer class="bg-[#A5C5E9]" id="contact">
         <div
-          class="h-96 max-w-[75vw] mx-auto pb-10 flex justify-between items-center max-md:flex-col max-md:justify-around"
+          class="h-64 max-w-[75vw] mx-auto flex justify-between items-center max-md:flex-col max-md:justify-around"
         >
           <h2 class="titule-secondary text-[#070228]" id="title-contact">
             contactame
@@ -537,13 +538,12 @@
             </li>
           </ul>
         </div>
-      </section>
-      <footer class="bg-[#A5C5E9]">
         <div
-          class="h-full max-w-[75vw] mx-auto pt-10 pb-10 grid place-content-center"
+          class="h-full max-w-[75vw] mx-auto pb-10 grid place-content-center"
         >
           <h3 class="text-[#070228] text-sm">
-            &COPY;2023 Brayan Pacheco, Todos los derechos reservados
+            &COPY;<span id="year"></span> Brayan Pacheco, Todos los derechos
+            reservados
           </h3>
         </div>
       </footer>
